This file lists all changes made to the game driver in all gory detail.
See the file HISTORY for a user-oriented summary of all the changes.

29-Mar-2002 (Lars Duening)  (3.3.434)
  - (config.h.in) The options MALLOC_CHECK and MALLOC_SBRK got mixed up.
  - (gcollect.c) The cleanup code didn't remove the program from the swap
      when it zeroed out a reference to a destructed blueprint. Later GCs
      then followed this invalid pointer.

27-Mar-2002 (Lars Duening)  (3.3.433)
  - (simulate.c, mapping) Since there is no longer a list of dirty mappings,
      and since the GC can handle dirty mappings, it is no longer feasible
      to keep an accurate count.
  - (efuns.c) to_struct() can now convert mappings to structs.
  - (mapping.c) mkmapping() can now convert structs to mappings.

26-Mar-2002 (Lars Duening)  (3.3.432)
  - (prolang.y) Constrained the switch() grammar to accept just blocks
      as body, not statements (reported by Menaures).
  - (comm.c) After removing a pending input_to, the proper noecho
      state is restored (provided by Ctx).

25-Mar-2002 (Lars Duening)  (3.3.431)
  - (port, simulate.c) Since memmem() is a GNU/Linux extension and buggy
      up to glibc 2.0, the driver now uses its own replacement all the
      time. But I adjusted the argument order to the one used by the
      correct Linux function (reported by Fiona).
  - (interpret.c) Function calls by address and global variable accesses
      now check if a set_this_object() is in effect.

24-Mar-2002 (Lars Duening)  (3.3.430)
  - (prolang.y) Assignment to struct members caused a fatal error if
      the struct did not have the named member. The problem was that
      in such a case an invalid type was recorded for the result (reported by
      Dafire).

21-Mar-2002 (Lars Duening)  (3.3.429)
  - (object.c) Shared strings are now saved in the <n> notation as well;
      this is mostly beneficial for saving endless repetitions of the
      same struct name (suggested by Bardioc).
