@@ -230,6 +230,7 @@ Lars Duening thanks:
      Reimer Behrends (Macbeth@Tubmud)
      Reinhard Pfau (reinhard@netlab1.hrz.uni-siegen.de, mubo@SiliconDream),
      Reinhard Vicinus (vicinus@rhrk.uni-kl.de, Risky@Unitopia)
+     "Remsgost" (remsgost@blitzstrahl, radm@remsnet.de)
      Robb Townsend (meecham@infonline.net)
      Robert Reither (mud@klein.htu.tuwien.ac.at, Nathan@Unholy.Lands)
      Rodney Quaye (sark@oberon.krans.com)
