@@ -60,12 +60,12 @@
 ;; TODO:: replace-program and the saving/storing of lfun closure values.
 ;; TODO:: Is this desirable anyway?
               
-(Project-Version lpmud 3-3 434)
-(Parent-Version lpmud 3-3 433)
-(Version-Log "The cleanup code didn't remove the program from the swap when it zeroed out a reference to a destructed blueprint.")
+(Project-Version lpmud 3-3 435)
+(Parent-Version lpmud 3-3 434)
+(Version-Log "The driver logs the pathname of the executable it tries to start.")
 (New-Version-Log
 "")
-(Checkin-Time "Sat, 29 Mar 2003 01:07:28 -0700")
+(Checkin-Time "Sun, 30 Mar 2003 17:43:16 -0700")
 (Checkin-Login lars)
 (Populate-Ignore ("~$" "\\.o$" "core$" "\\.emacs" "\\.a$" "\\.deps"
                   "\\.gz$" "\\.orig$" "\\.rej$" "\\.xSYM" "^driver$"
@@ -101,8 +101,8 @@
   ;; Information about the driver and the distribution in general
   (README (lpmud/n/0_README 1.4.1.1 644))
   (COPYRIGHT (lpmud/d/20_Copyright 1.10.1.8 644))
-  (CREDITS (lpmud/d/22_CREDITS 1.70.1.60 644))
-  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.497 644))
+  (CREDITS (lpmud/d/22_CREDITS 1.70.1.61 644))
+  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.498 644))
   (HISTORY (lpmud/f/49_HISTORY 1.315 644))
   (INSTALL (lpmud/d/18_INSTALL 1.11.1.19 644))
   (COPYING.LIB (lpmud/k/14_COPYING.LI 1.2 644))
@@ -171,7 +171,7 @@
   (src/call_out.c (lpmud/d/5_call_out.c 1.34.1.26 644))
   (src/closure.h (lpmud/f/44_closure.h 1.7.1.17 644))
   (src/closure.c (lpmud/d/4_closure.c 1.41.1.47.1.15 644))
-  (src/comm.c (lpmud/d/2_comm1.c 1.69.1.48.1.50 644))
+  (src/comm.c (lpmud/d/2_comm1.c 1.69.1.48.1.51 644))
   (src/comm.h (lpmud/d/3_comm.h 1.26.1.31 644))
   (src/driver.h (lpmud/f/36_driver.h 1.15.1.25 644))
   (src/dumpstat.h (lpmud/f/35_dumpstat.h 1.8 644))
@@ -194,9 +194,9 @@
   (src/interpret.h (lpmud/b/13_interpret. 1.33.1.36 644))
   (src/interpret.c (lpmud/b/14_interpret. 1.125.1.103.1.54.1.26 644))
   (src/lex.h (lpmud/b/11_lex.h 1.16.1.15.1.4 644))
-  (src/lex.c (lpmud/b/12_lex.c 1.62.1.71.1.51 644))
+  (src/lex.c (lpmud/b/12_lex.c 1.62.1.71.1.52 644))
   (src/main.h (lpmud/f/31_main.h 1.14.1.4.1.14 644))
-  (src/main.c (lpmud/b/8_main.c 1.60.1.43.1.38 644))
+  (src/main.c (lpmud/b/8_main.c 1.60.1.43.1.39 644))
   (src/mapping.h (lpmud/f/30_mapping.h 1.12.1.20 644))
   (src/mapping.c (lpmud/b/6_mapping.c 1.36.1.70 644))
   (src/md5.h (lpmud/l/18_md5.h 1.2 644))
